--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
 
         <div class="flex flex-col gap-5">
             <div class="border-2 border-gray-300 rounded-sm py-5 px-10 mt-10">
-                <div class="lg:flex lg:flex-row md:flex md:flex-row lg:text-start text-center flex flex-col  justify-between items-center border-b-2 border-gray-300 pb-5">
+                <div
+                    class="lg:flex lg:flex-row md:flex md:flex-row lg:text-start text-center flex flex-col  justify-between items-center border-b-2 border-gray-300 pb-5">
                     <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                         <h1 class="text-[#3881C6] font-bold">Модуль 1</h1>
                         <p class="font-bold">Тенденции и тренды современного мира</p>
@@ -274,7 +275,8 @@
                 <p class="py-5 text-[#3881C6]">9 видео роликов, вебинар с приглашенным экспертом</p>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 2</h1>
                     <p class="font-bold">Стартап подход к созданию международного IT продукта</p>
@@ -282,7 +284,8 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 3</h1>
                     <p class="font-bold">Бизнес моделирование и поиск Product Market Fit</p>
@@ -290,15 +293,18 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 4</h1>
-                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Определение рынка, поиск и исследование Целевой аудитории</p>
+                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Определение рынка, поиск и
+                        исследование Целевой аудитории</p>
                 </div>
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 5</h1>
                     <p class="font-bold">Что такое MVP и почему это важно</p>
@@ -306,7 +312,8 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 6</h1>
                     <p class="font-bold">Unit экономика и финансовое моделирование</p>
@@ -314,7 +321,8 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 7</h1>
                     <p class="font-bold">Что такое дорожная карта продукта?</p>
@@ -322,7 +330,8 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 8</h1>
                     <p class="font-bold">Документы дя международных инвесторов</p>
@@ -330,15 +339,18 @@
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
                     <h1 class="text-[#3881C6] font-bold">Модуль 9</h1>
-                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Открытие юридического лица. Возможности для стартапов</p>
+                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Открытие юридического лица.
+                        Возможности для стартапов</p>
                 </div>
                 <div><img src="./src/Group 1017.png " alt=""></div>
             </div>
 
-            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+            <div
+                class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
                 <h1 class="text-[#3881C6] font-bold">Демо день </h1>
                 <div class="lg:hidden md:hidden block"><img src="./src/Group 1017.png " alt=""></div>
             </div>
@@ -346,11 +358,13 @@
     </div>
 
     <div class="bg-[url(bg5.png)] h-160 md:h-170 lg:h-120 mt-20 bg-no-repeat bg-cover">
-        <div class="max-w-300 m-auto w-[90%] text-white lg:flex lg:flex-row flex flex-col lg:gap-0 gap-5 lg:justify-between lg:text-start text-center items-center py-5">
+        <div
+            class="max-w-300 m-auto w-[90%] text-white lg:flex lg:flex-row flex flex-col lg:gap-0 gap-5 lg:justify-between lg:text-start text-center items-center py-5">
 
             <div class="flex flex-col gap-5">
                 <h1 class="lg:text-[40px] text-[30px] lg:w-150">Попадите на радары инвесторов и партнеров</h1>
-                <p class="lg:w-100">В результате прохождения обучения мы создадим профили вашей компании на всех международных скаутинговых площадках</p>
+                <p class="lg:w-100">В результате прохождения обучения мы создадим профили вашей компании на всех
+                    международных скаутинговых площадках</p>
                 <div><button class="bg-[#07AF91] py-3 px-20 rounded-sm">Записаться в акселератор</button></div>
             </div>
 
@@ -371,20 +385,23 @@
     </div>
 
     <div class="max-w-300 m-auto w-[90%]">
-        <h1 class="lg:text-[50px] text-[30px] lg:text-start text-center py-10 text-[#1178B2] font-bold">Что вы получите в результате?</h1>
+        <h1 class="lg:text-[50px] text-[30px] lg:text-start text-center py-10 text-[#1178B2] font-bold">Что вы получите
+            в результате?</h1>
 
         <div class="flex flex-col gap-3">
             <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col justify-between lg:gap-0 gap-3">
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
                     <h1 class="text-[#88BBD8] text-[50px] font-bold">01</h1>
                     <p class="font-bold">Документы по продукту</p>
-                    <p class="lg:w-70">Бизнес план, отчет по анализу рынка, маркетинговый план, unit экономика, список гипотез, проект MVP</p>
+                    <p class="lg:w-70">Бизнес план, отчет по анализу рынка, маркетинговый план, unit экономика, список
+                        гипотез, проект MVP</p>
                 </div>
 
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
                     <h1 class="text-[#88BBD8] text-[50px] font-bold">02</h1>
                     <p class="font-bold">Обратная связь от рынка</p>
-                    <p class="lg:w-70">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                    <p class="lg:w-70">Проведение исследования целевой аудитории позволит сформировать Product market
+                        fit</p>
                 </div>
 
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
@@ -398,20 +415,140 @@
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-8 text-center flex flex-col gap-3">
                     <h1 class="text-[#88BBD8] text-[50px] font-bold">04</h1>
                     <p class="font-bold">Подписка на отчеты</p>
-                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер
+                    </p>
                 </div>
 
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-8 text-center flex flex-col gap-3">
                     <h1 class="text-[#88BBD8] text-[50px] font-bold">05</h1>
                     <p class="font-bold">Подписка на отчеты</p>
-                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер
+                    </p>
                 </div>
 
                 <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-4 text-center flex flex-col gap-3">
                     <h1 class="text-[#88BBD8] text-[50px] font-bold">06</h1>
                     <p class="font-bold">Подписка на отчеты</p>
-                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер
+                    </p>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%]">
+        <h1 class="text-[50px] text-[#2080B7] font-bold py-10 mt-5 lg:text-start text-center">Стоимость</h1>
+
+        <div class="lg:flex lg:flex-row md:flex md:flex-wrap  flex flex-col lg:gap-0 gap-5 justify-between">
+
+            <div class="lg:flex md:flex md:flex-row flex flex-col gap-5 md:gap-15 lg:gap-25 ">
+                <div class="border-2 border-gray-300 w-fit py-5 px-10 md:px-7 rounded-sm">
+                    <div class="border-b-2 py-3 border-gray-300 text-center gap-3 flex flex-col items-center">
+                        <div><img src="./src/Vector (34).png" alt=""></div>
+                        <p class="font-bold lg:w-50">Анализ международных рынков </p>
+                    </div>
+
+                    <div class="border-b-2 py-3 border-gray-300 flex flex-col gap-2">
+                        <p class="font-bold">Что входит в отчет?</p>
+
+                        <p>1. Анализ конкурентов</p>
+                        <p>2. Анализ инвесторов</p>
+                        <p>3. Размеры рынка (TAM,SAM,SOM)</p>
+                        <p>4. Анализ СМИ</p>
+                        <p>5. Анализ запрос в сети интернет</p>
+                    </div>
+
+                    <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                        <p class="font-bold">Готовность</p>
+                        <p class="text-[gray]">7 раб. дней</p>
+                    </div>
+
+                    <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                        <p class="font-bold">Язык</p>
+                        <p class="text-[gray]">рус. / англ.</p>
+                    </div>
+
+                    <div class="flex justify-between py-3">
+                        <p class="font-bold">Стоимость</p>
+                        <p class="text-[#1B80B9] font-bold">$1 000 </p>
+                    </div>
+
+                    <div><button class="bg-[#46A1D4] text-white py-3 px-20 rounded-sm lg:mt-7 md:mt-14">Оставить заявку</button>
+                    </div>
+
+                </div>
+
+                <div class="border-2 border-gray-300 w-fit py-5 px-10 md:px-7 rounded-sm">
+                    <div class="border-b-2 py-3 border-gray-300 text-center gap-3 flex flex-col items-center">
+                        <div><img src="./src/Vector (35).png" alt=""></div>
+                        <p class="font-bold lg:w-50 md:w-50">Упаковка стартапа под локальные рынки </p>
+                    </div>
+
+                    <div class="border-b-2 py-3 border-gray-300 flex flex-col gap-2">
+                        <p class="font-bold">Что входит в услугу?</p>
+
+                        <p>1. Анализ локальных рынков</p>
+                        <p>2. Бизнес план </p>
+                        <p>3. Питч презентация</p>
+                        <p>4. Финансовый план </p>
+                        <p>5. Расчет юнит экономики</p>
+                        <p>6. Проведение каст дева </p>
+                    </div>
+
+                    <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                        <p class="font-bold">Готовность</p>
+                        <p class="text-[gray]">7 раб. дней</p>
+                    </div>
+
+                    <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                        <p class="font-bold">Язык</p>
+                        <p class="text-[gray]">рус. / англ.</p>
+                    </div>
+
+                    <div class="flex justify-between py-3">
+                        <p class="font-bold">Стоимость</p>
+                        <p class="text-[#1B80B9] font-bold">$1 000 </p>
+                    </div>
+
+                    <div><button class="bg-[#46A1D4] text-white py-3 px-20 rounded-sm ">Оставить заявку</button></div>
+
+                </div>
+            </div>
+
+            <div class="border-2 border-gray-300 w-fit py-5 px-10 md:px-7 rounded-sm">
+                <div class="border-b-2 py-3 border-gray-300 text-center gap-3 flex flex-col items-center">
+                    <div><img src="./src/Group 670.png" alt=""></div>
+                    <p class="font-bold lg:w-50">Акселератор вашего бизнеса </p>
+                </div>
+
+                <div class="border-b-2 py-3 border-gray-300 flex flex-col gap-2">
+                    <p class="font-bold">Что входит в акселератор?</p>
+
+                    <p>1. Онлайн доступ к курсам</p>
+                    <p>2. Документы для бизнеса</p>
+                    <p>3. Питч презентация</p>
+                    <p>4. Демо день </p>
+                    <p>5. Провдижение по результатам </p>
+                </div>
+
+                <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                    <p class="font-bold">Готовность</p>
+                    <p class="text-[gray]">7 раб. дней</p>
+                </div>
+
+                <div class="flex justify-between border-b-2 border-gray-300 py-3">
+                    <p class="font-bold">Язык</p>
+                    <p class="text-[gray]">рус. / англ.</p>
+                </div>
+
+                <div class="flex justify-between py-3">
+                    <p class="font-bold">Стоимость</p>
+                    <p class="text-[#1B80B9] font-bold">$1 000 </p>
+                </div>
+
+                <div><button class="bg-[#46A1D4] text-white py-3 px-20 rounded-sm lg:mt-9">Оставить заявку</button>
+                </div>
+
             </div>
         </div>
     </div>
