--- a/index.html
+++ b/index.html
@@ -552,6 +552,35 @@
             </div>
         </div>
     </div>
+
+    <div class="max-w-300 m-auto w-[90%]">
+        <div><h1 class="text-[50px] lg:text-start text-center text-[#1178B2] mt-5 py-5">Кто мы?</h1></div>
+
+        <div class="lg:flex lg:flex-row flex flex-col lg:text-start text-center items-center justify-between">
+            <div><img src="./src/Снимок экрана 2022-11-14 в 5.45 1.png" alt=""></div>
+
+            <div class="flex flex-col md:gap-0 md:mt-10 gap-5 lg:gap-10">
+                <p class="lg:w-100"><span class="text-[#2080B7]">INNOMA.VC - </span>  Международное аналитическое агентство по запуску IT бизнеса на локальных рынках регионов Азии, Ближнего Востока, Латинской Америки, Африки.</p>
+
+                <p class="lg:w-100">Наша команда состоит из профессионалов своего дела и основной нашей целью является помощь IT компаниям получить необходимые знания и пакеты документов, чтобы успешно запустить свой продукт на международных рынках. </p>
+            </div>
+        </div>
+
+        <div class="border-2 border-gray-300 lg:flex lg:flex-row flex flex-col-reverse text-start lg:text-start md:text-center lg:mt-0 mt-5 items-center justify-between py-5 px-10 rounded-sm">
+            <div><img src="./src/Group 841.png" alt=""></div>
+
+            <div class="flex gap-3 flex-col">
+                <p class="lg:w-70">Всем привет!  Меня зовут Роман. Последние 6 лет я являюсь частью </p>
+                <p>инновационной экосистемы СНГ,  прошел путь от проектного </p>
+                <p class="lg:w-130">менеджера до руководителя продукта по автоматизированному скаутингу и скорингу стартапов. За 6 лет работы я увидел  множество ошибок и отсутствие ориентации акселерационных программ под запросы стартапов. Все акселераторы выполнялись ради акселераторв и выполнения КПЭ. </p>
+
+                <div>
+                    <p class="font-bold">Роман Гайн</p>
+                    <p class="text-[gray]">Основатель INNOMA.VC</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
