--- a/index.html
+++ b/index.html
@@ -581,6 +581,17 @@
             </div>
         </div>
     </div>
+
+    <div class="max-w-300 m-auto w-[90%] mt-20 overflow-auto">
+        <div class="flex w-300 justify-between">
+            <div ><img src="./src/IMG_6197 2.png" alt=""></div>
+            <div ><img src="./src/test23444 1.png" alt=""></div>
+            <div ><img src="./src/test233 1.png" alt=""></div>
+            <div ><img src="./src/Снимок экрана 2022-09-02 в 1.56 1.png" alt=""></div>
+            <div ><img src="./src/IMG_6198 2.png" alt=""></div>
+        </div>
+
+    </div>
 </body>
 
 </html>
