--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     </div>
 
     <div class="bg-[url(bg3.png)] md:h-120 lg:h-151 h-160 bg-no-repeat bg-cover">
-        <div class="max-w-300 m-auto w-[90%] text-white  text-center pt-50 flex flex-col gap-5">
-            <h1 class="lg:text-[50px] text-[30px]  bg-[#07AF91] ">Научитесь исследовать иностранные рынки и откройте
+        <div class="max-w-300 m-auto w-[90%] text-white text-center pt-50 lg:flex flex-col gap-5">
+            <h1 class="lg:text-[50px] text-[30px]  bg-[#07AF91] inline leading-normal">Научитесь исследовать иностранные рынки и откройте
                 новые возможности для своего бизнеса</h1>
 
             <p>Наша команда поможет вам изучить рынки Ближнего Востока, Азии, Латинской Америки и Африки</p>
@@ -591,6 +591,47 @@
             <div ><img src="./src/IMG_6198 2.png" alt=""></div>
         </div>
 
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%] my-20">
+        <h1 class="lg:text-[50px] text-[30px] text-center lg:text-start text-[#1178B2] ">Эксперты и трекеры программы</h1>
+
+        <div class="flex justify-between overflow-auto items-center">
+            <div class="bg-[blue] h-13 p-5 rounded-[50%] lg:block hidden">
+                <img src="./src/./Arrow 11.png" alt="">
+            </div>
+            <div class=" lg:w-fit flex flex-col items-center ">
+                <img src="./src/Ellipse 545.png" alt="">
+                <div class="w-55 flex flex-col items-center ">
+                    <p class="font-bold text-[18px]">Юрий Ким</p>
+                    <p class="text-center">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                </div>
+            </div>
+            <div class=" lg:w-fit flex flex-col items-center ">
+                <img src="./src/Ellipse 546.png" alt="">
+                <div class="w-55 flex flex-col items-center ">
+                    <p class="font-bold text-[18px]">Эшли Абрамс</p>
+                    <p class="text-center">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                </div>
+            </div>
+            <div class=" lg:w-fit flex flex-col items-center ">
+                <img src="./src/Ellipse 548.png" alt="">
+                <div class="w-55 flex flex-col items-center ">
+                    <p class="font-bold text-[18px]">Фатими Юсуф</p>
+                    <p class="text-center">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                </div>
+            </div>
+            <div class=" lg:w-fit flex flex-col items-center ">
+                <img src="./src/Ellipse 544.png" alt="">
+                <div class="w-55 flex flex-col items-center ">
+                    <p class="font-bold text-[18px]">Майкл Донован</p>
+                    <p class="text-center">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                </div>
+            </div>
+             <div class="bg-[blue] h-13 p-5 rounded-[50%] lg:block hidden">
+                <img src="./src/./Arrow 10 (1).png" alt="">
+            </div>
+        </div>  
     </div>
 </body>
 
