--- a/index.html
+++ b/index.html
@@ -699,6 +699,17 @@
            
         </div>
     </div>
+
+    <div class="bg-[url(bg6.png)] w-full lg:h-150 md:h-140 h-160 bg-no-repeat bg-cover mt-20">
+        <div class="bg-[url(bg7.png)] w-full lg:h-150 md:h-140 h-160">
+            <div class="max-w-300 m-auto w-[90%] text-white flex flex-col gap-5 items-center lg:gap-3 text-center pt-40">
+                <h1 class="lg:text-[50px] text-[30px] font-bold">Мы создаем международное сообщество экспертов и партнеров</h1>
+                <p class="lg:w-130 text-[#bdbbbba2]">Если вы или ваш бизнес может быть полезен IT  командам при выходе на международные рынки,  приглашем вас стать нашим партнером</p>
+
+                <div><button class="bg-[#1C81B9] py-3 px-15 rounded-sm">Стать партнером</button></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
