--- a/index.html
+++ b/index.html
@@ -710,6 +710,39 @@
             </div>
         </div>
     </div>
+
+    <div class="max-w-300 m-auto w-[90%] ">
+        <h1 class="text-[50px] text-[#1178B2] py-10 mt-10">Мероприятия и события</h1>
+
+        <div class="md:flex md:flex-row flex overflow-auto flex-col lg:gap-0 gap-5 justify-between">
+            <div class="shadow-2xl w-fit ">
+                <div><img src="./src/иллюстрация-вектора-карты-в-регионе-mena-eps-167723480 1.png" alt=""></div>
+                <div class="p-5 flex flex-col gap-2">
+                    <p class="font-bold">Новый отчет по MENA</p>
+                    <p class="md:w-70">Аналитический отчет по рынкам Ближнего Востока (инвесторы, объем раундов, ТОП сферы)</p>
+                    <p class="mt-5">22.11.2022</p>
+                </div>
+            </div>
+
+            <div class="shadow-2xl w-fit ">
+                <div><img src="./src/434ba4f5a20d0c361d4ae733771006a7 1.png" alt=""></div>
+                <div class="p-5 flex flex-col gap-2">
+                    <p class="font-bold md:w-80">Вебинар по особенностям рынков Ближнего Востока</p>
+                    <p class="md:w-70">Поговорим с экспертами рынков в формате дискуссии</p>
+                    <p class="mt-5">22.11.2022</p>
+                </div>
+            </div>
+
+            <div class="shadow-2xl w-fit ">
+                <div><img src="./src/Снимок экрана 2022-11-15 в 1.13 1.png" alt=""></div>
+                <div class="p-5 flex flex-col gap-2">
+                    <p class="font-bold md:w-80">Вебинар по особенностям рынков Ближнего Востока</p>
+                    <p class="md:w-70">Поговорим с экспертами рынков в формате дискуссии</p>
+                    <p class="mt-5">22.11.2022</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
