--- a/index.html
+++ b/index.html
@@ -787,6 +787,24 @@
         </div>
 
     </div>
+
+    <div class="bg-[url(bg9.png)] py-5 bg-no-repeat bg-cover mt-5">
+        <div class="max-w-300 m-auto w-[90%] lg:gap-0 gap-5 flex justify-between items-center">
+            <div><img src="./src/Group 872.png" alt=""></div>
+
+            <div class="text-white md:flex gap-3 lg:gap-10 items-center hidden">
+                <p class="md:text-[13px] lg:text-[20px]">Кто мы?</p>
+                <p class="md:text-[13px] lg:text-[20px]">Услуги</p>
+                <p class="md:text-[13px] lg:text-[20px]">Акселератор</p>
+                <p class="md:text-[13px] lg:text-[20px]">Новости</p>
+            </div>
+
+            <div class="text-white flex flex-col gap-3 md:text-[20px] text-[13px] ">
+                <p class="md:w-58  ">Dubai, Single Business Tower 1503, Business Bay</p>
+                <p>Sales@innoma.vc</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
